Update RabbitMQ config and listener queue binding
Added new RabbitMQ exchange and queue configurations in `application.yaml` for "motor-de-regras.analise". Updated the `Listener` class to bind the `RabbitListener` to the new "analise.pendente" queue.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,8 +7,14 @@ spring:
     username: guest
     password: guest
 rabbitmq:
+  exchanges:
+    motor-de-regras:
+      analise:
+        concluida: motor-de-regras.analise-concluida.ex
   queue:
-    validacao: motor-de-regras.validar-documento
+    motor-de-regras:
+      analise:
+        pendente: motor-de-regras.analise-pendente
 #Zipkin
 management:
   tracing:
