Add RabbitMQ config for "analise concluida"
Introduced a new RabbitMQ configuration to handle "analise concluida" events. This includes a fanout exchange, durable queue, and required bindings. Updated `application.yaml` to include properties for the new configuration.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,6 +15,7 @@ rabbitmq:
     motor-de-regras:
       analise:
         pendente: motor-de-regras.analise-pendente
+        concluida: motor-de-regras.analise-concluida
 #Zipkin
 management:
   tracing:
