--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,6 +10,7 @@ rabbitmq:
   exchanges:
     motor-de-regras:
       analise:
+        pendente: motor-de-regras.analise-pendente.ex
         concluida: motor-de-regras.analise-concluida.ex
   queue:
     motor-de-regras:
